修复 build.gradle