@@ -1,75 +1,62 @@
-apply plugin: 'java'
+apply plugin: "java"
 
 version '1.0'
 
 targetCompatibility = 8
 sourceCompatibility = JavaVersion.VERSION_16
 
-sourceSets.main.java.srcDirs = ['src']
+sourceSets.main.java.srcDirs = ["src"]
 
 repositories{
     mavenCentral()
     maven{ url 'https://www.jitpack.io' }
 }
 
-ext{
+ext {
     //the build number that this mod is made for
-    mindustryVersion = 'v140.1'
-    jabelVersion = '93fde537c7'
-    uncVersion = '1.6.1'
-    sdkRoot = System.getenv('ANDROID_HOME') ?: System.getenv('ANDROID_SDK_ROOT')
+    mindustryVersion = 'v141.3'
+    sdkVersion = "29.0.3"
+    jabelVersion = "93fde537c7"
+    sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
 
 //java 8 backwards compatibility flag
-allprojects{
-    tasks.withType(JavaCompile).tap{
-        configureEach{
-            options.compilerArgs.addAll(['--release', '8'])
-            options.fork = true
-            options.forkOptions.jvmArgs.addAll([
-                    '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-                    '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-                    '--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-                    '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-                    '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-                    '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-            ])
-        }
+allprojects {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs.addAll(['--release', '8'])
     }
 }
 
 dependencies{
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
-    annotationProcessor "com.github.EB-wilson.UniverseCore:annotations:$uncVersion"
 }
 
 //force arc version
-configurations.configureEach{
-    resolutionStrategy.eachDependency{ details ->
-        if(details.requested.group == 'com.github.Anuken.Arc'){
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == 'com.github.Anuken.Arc') {
             details.useVersion "$mindustryVersion"
         }
     }
 }
 
+task jarAndroid {
+    dependsOn "jar"
 
-tasks.register('jarAndroid'){
-    dependsOn 'jar'
+    doLast {
+        if (!sdkRoot || !new File(sdkRoot).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.")
 
-    doLast{
-        if(!sdkRoot || !new File(sdkRoot as String).exists()) throw new GradleException('No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.')
+        def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find { f -> new File(f, "android.jar").exists() }
 
-        def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find{ f -> new File(f, 'android.jar').exists() }
-
-        if(!platformRoot) throw new GradleException('No android.jar found. Ensure that you have an Android platform installed.')
+        if (!platformRoot) throw new GradleException("No android.jar found. Ensure that you have an Android platform installed.")
 
         //collect dependencies needed for desugaring
-        def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, 'android.jar')]).collect{ "--classpath $it.path" }.join(' ')
+        def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect { "--classpath $it.path" }.join(" ")
 
         //dex and desugar files - this requires d8 in your PATH
-        "d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
+        "$sdkRoot\\build-tools\\$sdkVersion\\d8.bat $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
                 .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
     }
 }
@@ -77,36 +64,28 @@ tasks.register('jarAndroid'){
 jar{
     archiveFileName = "${project.archivesBaseName}Desktop.jar"
 
-    from{
-        configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 
-    from(rootDir){
-        include 'mod.hjson'
+    from(rootDir) {
+        include "mod.hjson"
     }
 
-    from('assets/'){
-        include '**'
-    }
-
-}
-
-tasks.register('game'){
-    dependsOn jar
-    doLast{
-        "mv -f $buildDir/libs/${project.archivesBaseName}Desktop.jar $buildDir/libs/mindustry_mod".execute().waitForProcessOutput(System.out, System.err)
-        '/Users/abc/Mindustry.app/Contents/MacOS/Mindustry ; exit'.execute().waitForProcessOutput(System.out, System.err)
+    from("assets/") {
+        include "**"
     }
 }
 
-tasks.register('deploy'){
+task deploy(type: Jar) {
     dependsOn jarAndroid
     dependsOn jar
     archiveFileName = "${project.archivesBaseName}.jar"
 
-    from{ [zipTree("$buildDir/libs/${project.archivesBaseName}Desktop.jar"), zipTree("$buildDir/libs/${project.archivesBaseName}Android.jar")] }
-    doLast{
-        delete{
+    from { [zipTree("$buildDir/libs/${project.archivesBaseName}Desktop.jar"), zipTree("$buildDir/libs/${project.archivesBaseName}Android.jar")] }
+
+    doLast {
+        delete {
             delete "$buildDir/libs/${project.archivesBaseName}Desktop.jar"
             delete "$buildDir/libs/${project.archivesBaseName}Android.jar"
         }
